<resources>
    <string name="app_name">Project_Manager</string>
    <string name="bar">Hi, Hacer!</string>
    <string name="good_morning">Good Morning!</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome!</string>
    <string name="let_s_schedule_your_projects">Let\'s Schedule \nyour projects.</string>
    <string name="ongoing_project">Ongoing Project</string>
    <string name="view_all">View All</string>
    <string name="user_name">Hacer YAMAN</string>
    <string name="title">Mobile Application Developer</string>
    <string name="project_count">120 Projects</string>
    <string name="all_projects">All Projects</string>
</resources>